--- a/src/App.css
+++ b/src/App.css
@@ -246,3 +246,23 @@ h3 img{
   }
 
 }
+
+
+
+.no_match{
+    background-color: #E9F1FF;
+    background: url('assets/img/404_bg.png') no-repeat center;
+    background-size: cover;
+    margin-top: 90px;
+    min-height: 90vh;
+}
+
+
+.dark .no_match{
+    background-color: #060028;
+}
+
+.no_match img{
+    margin: 0 auto;
+    padding-top: 50px;
+}
