--- a/src/App.css
+++ b/src/App.css
@@ -266,3 +266,28 @@ h3 img{
     margin: 0 auto;
     padding-top: 50px;
 }
+
+
+.goBack_button{
+font-family: Poppins;
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 18px;
+color: #000;
+display: block;
+padding-top: 100px;
+cursor: pointer;
+transition: 0.4s;
+display: flex;
+align-items: center;
+}
+.goBack_button span{
+  font-size: 22px;
+  line-height: 22px;
+  margin-right: 10px;
+}
+
+.dark .goBack_button{
+  color: #fff;
+}
