--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -40,7 +40,7 @@ footer{
     margin: 0;
 }
 
-.footer_menu ul li a{
+.footer_menu ul li a, .footer_menu ul li button{
     font-family: Poppins;
     font-style: normal;
     font-weight: 500;
@@ -49,14 +49,17 @@ footer{
     color: #000;
     cursor: pointer;
     transition: 0.4s;
+    border: none;
+    background: none;
+    outline: none;
 }
-.dark .footer_menu ul li a{
+.dark .footer_menu ul li a, .dark .footer_menu ul li button{
     transition: 0.4s;
     color: #fff;
 }
 
 
-.footer_menu ul li a:hover{
+.footer_menu ul li a:hover, .footer_menu ul li button:hover{
     transition: 0.4s;
     color:#0075FF ;
 }
@@ -65,16 +68,20 @@ footer{
     display: flex;
 }
 
-.footer_right a{
+.footer_right a, .footer_right button{
     margin-left: 20px;
     transition: 0.4s;
     cursor: pointer;
+    background: none;
+    outline: none;
+    border: none;
+    display: flex;
 }
-.footer_right a img{
+.footer_right a img, .footer_right button img{
     width: 90%;
 }
 
-.footer_right a:hover{
+.footer_right a:hover, .footer_right button:hover{
     transition: 0.4s;
     transform: scale(1.1);
 }
