--- a/src/components/MainHow/MainHow.css
+++ b/src/components/MainHow/MainHow.css
@@ -47,7 +47,7 @@
   color: #fff;
 }
 
-.main_how_center a {
+.main_how_center button {
   background: url("../../assets/img/check_faq_bg.png") no-repeat center;
   background-size: contain;
   padding: 21px 33px;
@@ -62,24 +62,26 @@
   transition: 0.4s;
   margin: 30px auto 0;
   position: relative;
+  border: none;
+  outline: none;
 }
 
-.main_how_center a span {
+.main_how_center button span {
   position: relative;
   z-index: 1;
 }
 
-.main_how_center a:hover span {
+.main_how_center button:hover span {
   position: relative;
   z-index: 1;
   color: #121024;
 }
 
-.dark .main_how_center a:hover span {
+.dark .main_how_center button:hover span {
   color: #fff;
 }
 
-.main_how_center a::before {
+.main_how_center button::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -92,12 +94,12 @@
   transition: 0.4s;
 }
 
-.main_how_center a:hover::before {
+.main_how_center button:hover::before {
   transition: 0.4s;
   opacity: 1;
 }
 
-.dark .main_how_center a {
+.dark .main_how_center button {
   transition: 0.4s;
   color: #fff;
 }
