--- a/src/components/SoonPopup/Popup.css
+++ b/src/components/SoonPopup/Popup.css
@@ -324,7 +324,8 @@
 
   .popup-wrapper.timer_popup.soon_popup .close {
     right: 10%;
-    top: 29%;
+    top: 50%;
+    transform: translateY(-60px);
   }
 }
 
@@ -334,7 +335,8 @@
   }
   .popup-wrapper.timer_popup.soon_popup .close {
     right: 10%;
-    top: 34%;
+    top: 50%;
+    transform: translateY(-60px);
   }
 }
 
@@ -344,6 +346,7 @@
   }
   .popup-wrapper.timer_popup.soon_popup .close {
     right: 10%;
-    top: 38%;
+    top: 50%;
+    transform: translateY(-60px);
   }
 }
