--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -9,29 +9,33 @@
 }
 
 .tokenomics h4 {
-  font-family: Poppins;
+  font-family: Rambla;
   font-style: normal;
-  font-weight: 500;
+  font-weight: bold;
   font-size: 20px;
-  line-height: 22px;
+  line-height: 103.5%;
   text-align: center;
-  color: #0075ff;
-  text-shadow: 0px 4px 4px rgba(86, 86, 86, 0.25);
+  color: #0075FF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .tokenomics h4 span {
   transition: 0.4s;
-  color: #2a00a7;
+  font-family: Rambla;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 22px;
+  text-align: center;
+  color: rgba(97, 0, 255, 0.85);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.dark .tokenomics h4 span {
+/* .dark .tokenomics h4 span {
   transition: 0.4s;
   color: #00fff0;
-}
-/* .dark .tokenomics h4 span{
-    transition: 0.4s;
-    color:#fff ;
 } */
+
 
 .tokenomics_bg {
   position: absolute;
@@ -47,14 +51,13 @@
 }
 
 .tokenomics h5 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
+  font-family: Rambla;
+  font-style: italic;
+  font-weight: normal;
   font-size: 16px;
   line-height: 18px;
   text-align: center;
-  color: #0075ff;
-  text-shadow: 0px 4px 4px rgba(86, 86, 86, 0.25);
+  color: #0075FF;
 }
 
 .tokenomics_main {
@@ -115,6 +118,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border: none;
+  outline: none;
+}
+
+
+
+.tokenomics_right_block span i{
+  font-style: italic;
 }
 
 .tokenomics_right_block:first-child span {
@@ -204,8 +215,8 @@
 }
 
 .tokenomics_right_block span {
-  font-family: Poppins;
-  font-style: normal;
+  font-family: Rambla;
+  font-style: bold;
   font-weight: 800;
   font-size: 16px;
   line-height: 20px;
