--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -60,7 +60,7 @@ header {
   position: absolute;
   margin-top: 5px;
   background: url("../../assets/img/collapse_bg.png") no-repeat center;
-
+  background-size: contain;
   padding: 0;
   opacity: 0;
   transition: 0.2s;
@@ -84,7 +84,7 @@ header {
   padding: 5px 0 0 10px;
 }
 
-.header_left_menu a:hover {
+.header_left_menu a:hover, .header_left_menu button:hover  {
   transition: 0.4s;
   color: #0075ff !important;
 }
