--- a/src/components/JoinUs/JoinUs.css
+++ b/src/components/JoinUs/JoinUs.css
@@ -15,7 +15,7 @@
     flex-direction: column;
 }
 
-.main_join_us img{
+.main_join_us>img{
     margin:150px auto 10px; 
     width: 30%;
 }
@@ -78,37 +78,44 @@
 
 @media (max-width: 767.98px){
 
+    .main_join_us>img {
+        margin: 0 auto;
+        width: 75%;
+    }
+
     .main_join_us img{
-    margin:50px auto 10px; 
+    margin:100px auto 10px; 
 }
     .main_join_us{
-        height: 330px;
+        height: auto;
     }
 
     .join_us_button {
-    font-size: 12px;
-    line-height: 12px;
-    width: 130px;
-    height: 40px;
+    font-size: 18px;
+    line-height: 18px;
+    width: 180px;
+    height: 60px;
     display: flex;
+    white-space: nowrap;
     justify-content: center;
     align-items: center;
     position: relative;
     margin: 0 auto;
+    margin-bottom: -60px;
 }
 }
 
 
 @media (max-width: 575.98px){
     .main_join_us{
-        height: 270px;
+        height: auto;
     }
 }
 
 
 @media (max-width: 420.98px){
     .main_join_us{
-        height: 250px;
+        height: auto;
     }
 }
 
