--- a/src/components/MainInfo/MainInfo.css
+++ b/src/components/MainInfo/MainInfo.css
@@ -13,7 +13,7 @@
   margin: 0 auto;
   max-width: 800px;
   z-index: 2;
-  margin-bottom: -40px;
+  margin-bottom: 20px;
   position: relative;
 }
 
@@ -28,7 +28,7 @@
 
 .main_info_right {
   width: 60%;
-  padding: 80px 0 50px 50px;
+  padding: 30px 0 50px 50px;
 }
 
 .main_info_right .check_faq_button {
@@ -47,6 +47,7 @@
   transition: 0.4s;
   position: relative;
 }
+
 
 .main_info_right .check_faq_button span {
   transition: 0.4s;
@@ -97,8 +98,13 @@
   line-height: 24px;
   color: #444444;
 }
+
+.main_info_right ul > span{
+  font-weight: bold !important;
+}
 .dark .main_info_right ul > span{
   color: #fff;
+  font-weight: bold;
 }
 
 .main_info_right ul li {
@@ -167,7 +173,7 @@
   }
   .main_info .title {
     max-width: 90%;
-    margin-top: -20px;
+    margin-top: 20px;
     margin-bottom: 0;
   }
   .main_info_left img {
