--- a/src/components/ContentMarketplace/ContentMarketplaceHeader/ContentMarketplaceHeader.css
+++ b/src/components/ContentMarketplace/ContentMarketplaceHeader/ContentMarketplaceHeader.css
@@ -220,7 +220,7 @@
 
 .collections_filter button{
     position: absolute;
-    top: 50%;
+    top: 60%;
     right: 10px;
     transform: translateY(-50%);
     border: none;
@@ -245,4 +245,49 @@
     color: #fff;
     padding: 5px;
     margin-left: 10px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.categories_filter button svg {
+    margin-right: 10px;
+}
+
+.on_sale_in_search{
+    position: relative;
+    padding:10px;
+}
+
+
+.on_sale_in_search input{
+    background: rgba(255, 255, 255, 0.02);
+    border: 1px solid #797979;
+    -webkit-backdrop-filter: blur(16px);
+            backdrop-filter: blur(16px);
+    border-radius: 12px;
+    padding: 5px 40px 5px 10px;
+    width: 100%;
+    outline: none;
+}
+
+.on_sale_in_search button{
+    position: absolute;
+    top: 55%;
+    right: 10px;
+    transform: translateY(-50%);
+    border: none;
+    background: none;
+}
+
+.on_sale_in_checkbox{
+    position: relative;
+    padding:0 10px;
+}
+
+
+.on_sale_in_checkbox .checkbox{
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
 }
