--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -1,13 +1,12 @@
 .partners {
-  
   background: url("../../assets/img/mian_bg_nft.png") no-repeat center;
   background-size: contain;
 }
 
-.partners_wrapper{
-  background: url('../../assets/img/partners_bg.png') no-repeat center;
-  background-size: cover;
-  padding: 40px 0;
+.partners_wrapper {
+  background: url("../../assets/img/partners_bg.png") no-repeat center;
+  background-size: 120%;
+  padding: 55px 0;
 }
 
 .partners .title {
@@ -32,56 +31,56 @@
   cursor: pointer;
 }
 
-.become_partner{
-        border: none;
-    outline: none;
-    cursor: pointer;
-    transition: 0.4s;
-    background: url('../../assets/img/learn_more_button_bg.png') no-repeat center;
-    background-size: contain;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 18px;
-    color: #FFFFFF;
-    cursor: pointer;
-    position: relative;
-    transition: opacity 0.4s;
-    width: 180px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 40px auto 0;
+.become_partner {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.4s;
+  background: url("../../assets/img/learn_more_button_bg.png") no-repeat center;
+  background-size: contain;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
+  color: #ffffff;
+  cursor: pointer;
+  position: relative;
+  transition: opacity 0.4s;
+  width: 180px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px auto 0;
 }
 
-.become_partner::before{
-    content: '';
-    background: url('../../assets/img/signup_button_bg.png') no-repeat center;
-    background-size: contain;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: 0.4s;
+.become_partner::before {
+  content: "";
+  background: url("../../assets/img/signup_button_bg.png") no-repeat center;
+  background-size: contain;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.4s;
 }
 
-.become_partner:hover{
+.become_partner:hover {
   transition: 0.4s;
   background: transparent;
   color: #141233 !important;
 }
 
-.dark .become_partner:hover{
+.dark .become_partner:hover {
   transition: 0.4s;
   background: transparent;
   color: #fff !important;
 }
 
-.become_partner:hover::before{
+.become_partner:hover::before {
   transition: 0.4s;
   opacity: 1;
 }
