--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,7 +22,8 @@ header {
   justify-content: space-between;
 }
 
-.header_left_menu a , .header_left_menu button{
+.header_left_menu a,
+.header_left_menu button {
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
@@ -46,7 +47,8 @@ header {
   transition: none;
 }
 
-.dark .header_left_menu a , .dark .header_left_menu button{
+.dark .header_left_menu a,
+.dark .header_left_menu button {
   transition: 0.4s;
   color: #fff;
 }
@@ -59,7 +61,7 @@ header {
 .nft_collapse {
   position: absolute;
   margin-top: 5px;
-  background: url("../../assets/img/collapse_bg.png") no-repeat center;
+  background: url('../../assets/img/collapse_bg.png') no-repeat center;
   background-size: contain;
   padding: 0;
   opacity: 0;
@@ -76,15 +78,17 @@ header {
 }
 
 .dark .nft_collapse {
-  background: url("../../assets/img/collapse_bg_dark.png") no-repeat center;
+  background: url('../../assets/img/collapse_bg_dark.png') no-repeat center;
   background-size: contain;
 }
 
-.nft_collapse a, .nft_collapse button {
+.nft_collapse a,
+.nft_collapse button {
   padding: 5px 0 0 10px;
 }
 
-.header_left_menu a:hover, .header_left_menu button:hover  {
+.header_left_menu a:hover,
+.header_left_menu button:hover {
   transition: 0.4s;
   color: #0075ff !important;
 }
@@ -158,17 +162,17 @@ header {
   right: 25px;
   top: 25px;
   background: #e3e6ec;
-  background: url("../../assets/img/menu_btn.png") no-repeat center;
+  background: url('../../assets/img/menu_btn.png') no-repeat center;
   background-size: 80%;
   display: none;
 }
 
 .dark .bm-burger-button {
-  background: url("../../assets/img/menu_btn_dark.png") no-repeat center;
+  background: url('../../assets/img/menu_btn_dark.png') no-repeat center;
 }
 
 .open .bm-burger-button {
-  background: url("../../assets/img/menu_btn_close.png") no-repeat center;
+  background: url('../../assets/img/menu_btn_close.png') no-repeat center;
 }
 
 .bm-cross-button {
@@ -239,7 +243,7 @@ div.menu-item div {
 }
 
 .menu-item button.login {
-  background: url("../../assets/img/signup_button_bg.png") no-repeat center;
+  background: url('../../assets/img/signup_button_bg.png') no-repeat center;
   background-size: contain;
   font-family: Poppins;
   font-style: normal;
@@ -269,13 +273,13 @@ div.menu-item div {
 }
 
 .menu-item button.login::before {
-  content: "";
+  content: '';
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
   position: absolute;
-  background: url("../../assets/img/learn_more_button_bg.png") no-repeat center;
+  background: url('../../assets/img/learn_more_button_bg.png') no-repeat center;
   background-size: contain;
   transition: 0.4s;
   opacity: 0;
@@ -309,12 +313,13 @@ div.menu-item div button:nth-child(2) {
   color: #0075ff;
 }
 
-button.bm-item{
+button.bm-item {
   border: none;
   width: 100%;
 }
 
-a.bm-item, button.bm-item {
+a.bm-item,
+button.bm-item {
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
@@ -330,13 +335,13 @@ a.bm-item, button.bm-item {
   cursor: pointer;
 }
 
-.dark a.bm-item, .dark button.bm-item {
+.dark a.bm-item,
+.dark button.bm-item {
   color: #fff;
 }
 
-
 .menu-item button {
-  background: url("../../assets/img/learn_more_button_bg.png") no-repeat center;
+  background: url('../../assets/img/learn_more_button_bg.png') no-repeat center;
   background-size: contain;
   font-family: Poppins;
   font-style: normal;
@@ -371,8 +376,8 @@ a.bm-item, button.bm-item {
 }
 
 .menu-item button::before {
-  content: "";
-  background: url("../../assets/img/signup_button_bg.png") no-repeat center;
+  content: '';
+  background: url('../../assets/img/signup_button_bg.png') no-repeat center;
   background-size: contain;
   width: 100%;
   height: 100%;
@@ -391,14 +396,14 @@ div.menu-item .soc_header_mobile {
   justify-content: space-around;
 }
 
-.mobile_investors_collapse .ReactCollapse--collapse{
+.mobile_investors_collapse .ReactCollapse--collapse {
   transition: 0.4s;
   overflow: hidden;
 }
 
 .mobile_investors_collapse {
-  border-bottom: 1px solid #100F21;
-  background-color: #D4D3E2;
+  border-bottom: 1px solid #100f21;
+  background-color: #d4d3e2;
 }
 
 .dark .mobile_investors_collapse {
@@ -406,7 +411,7 @@ div.menu-item .soc_header_mobile {
   background-color: #23214e;
 }
 
-.mobile_investors_collapse .ReactCollapse--collapse a{
+.mobile_investors_collapse .ReactCollapse--collapse a {
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
@@ -414,11 +419,11 @@ div.menu-item .soc_header_mobile {
   text-align: left;
   display: flex;
   align-items: center;
-  color: #100F21;
+  color: #100f21;
   padding: 10px 0 10px 15%;
 }
 
-.dark .mobile_investors_collapse .ReactCollapse--collapse a{
+.dark .mobile_investors_collapse .ReactCollapse--collapse a {
   color: #fff;
 }
 
@@ -450,20 +455,100 @@ div.menu-item .soc_header_mobile {
   max-width: 170px;
 }
 
-@media (min-width: 1199.98px) {
+.auth {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.auth .signup,
+.auth .login {
+  background: url('../../assets/img/login_button.png') no-repeat center;
+  background-size: contain;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  color: #444444;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.4s;
+  position: relative;
+  border: none;
+  outline: none;
+  margin: 0 0 0 10px;
+  height: 40px;
+  width: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dark .auth .signup,
+.dark .auth .login {
+  background: url('../../assets/img/login_button.png') no-repeat center;
+  background-size: contain;
+}
+
+.auth .login span,
+.auth .signup span {
+  position: relative;
+  z-index: 1;
+}
+
+.auth .login:hover span,
+.auth .signup:hover span {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+}
+
+.dark .auth .login:hover span,
+.auth .signup:hover span {
+  color: #fff;
+}
+
+.auth .signup::before,
+.auth .login::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  background: url('../../assets/img/login_button_hover.png') no-repeat center;
+  background-size: contain;
+  transition: 0.4s;
+}
+
+.auth .signup:hover::before,
+.auth .login:hover::before {
+  transition: 0.4s;
+  opacity: 1;
+}
+
+.dark .auth .signup,
+.dark .auth .login {
+  transition: 0.4s;
+  color: #fff;
+}
+
+@media (min-width: 991.98px) {
   header .container {
     position: relative;
   }
 
   header .header_main {
     position: absolute;
-    width: 90vw;
+    width: 95vw;
     left: 50%;
     transform: translateX(-50%);
   }
 
   .header_search input {
-    min-width: 274px;
+    /* min-width: 274px; */
   }
 }
 
@@ -476,11 +561,31 @@ div.menu-item .soc_header_mobile {
 @media (max-width: 1199.98px) {
   .header_main a,
   .header_main button {
-    font-size: 12px;
+    font-size: 11px;
   }
 
   .header_logo {
     width: 140px;
+  }
+
+  .auth .signup,
+  .auth .login {
+    height: 35px;
+    width: 78px;
+    font-size: 12px;
+  }
+  button.ntf_header {
+    height: 42px;
+    width: 78px;
+    margin-left: 10px;
+  }
+
+  .auth {
+    margin-left: 0;
+  }
+  .header_left_menu a,
+  .header_left_menu button {
+    margin: 0 5px;
   }
 }
 
@@ -648,10 +753,10 @@ div.menu-item .soc_header_mobile {
 }
 
 #button-12 .knobs:before {
-  content: "";
+  content: '';
   left: 9px;
   top: 50%;
-  background: url("../../assets/img/sun_dark.png") no-repeat center;
+  background: url('../../assets/img/sun_dark.png') no-repeat center;
   background-size: contain;
   width: 20px;
   height: 20px;
@@ -670,13 +775,13 @@ div.menu-item .soc_header_mobile {
 }
 
 #button-12 .knobs:after {
-  content: "";
+  content: '';
   right: 8px;
   top: 50%;
   width: 20px;
   height: 20px;
   color: #fff;
-  background: url("../../assets/img/moon.png") no-repeat center;
+  background: url('../../assets/img/moon.png') no-repeat center;
   background-size: contain;
 }
 
@@ -694,10 +799,10 @@ div.menu-item .soc_header_mobile {
 } */
 
 #button-12 .knobs span:before {
-  content: "";
+  content: '';
   color: #fff;
   font-weight: 100;
-  background: url("../../assets/img/sun.png") no-repeat center;
+  background: url('../../assets/img/sun.png') no-repeat center;
   background-size: cover;
 }
 
@@ -708,12 +813,12 @@ div.menu-item .soc_header_mobile {
 }
 
 #button-12 .knobs span:after {
-  content: "";
+  content: '';
   right: -56px;
   background: (90deg, #5507df 3.7%, #34e7fd 100%);
   width: 38px;
   height: 100%;
-  background: url("../../assets/img/moon_dark.png") no-repeat center;
+  background: url('../../assets/img/moon_dark.png') no-repeat center;
   background-size: cover;
 }
 
@@ -730,7 +835,7 @@ div.menu-item .soc_header_mobile {
 }
 
 .ntf_header {
-  background: url("../../assets/img/ntf_button_bg.png") no-repeat center;
+  background: url('../../assets/img/ntf_button_bg.png') no-repeat center;
   background-size: contain;
   font-family: Poppins;
   font-style: normal;
@@ -738,12 +843,13 @@ div.menu-item .soc_header_mobile {
   font-size: 14px;
   line-height: 21px;
   color: #ffffff;
-  padding: 10px;
-  margin-left: 40px;
+  margin-left: 20px;
   cursor: pointer;
   position: relative;
   border: none;
   outline: none;
+  height: 40px;
+  width: 90px;
 }
 
 .ntf_header:hover {
@@ -759,8 +865,8 @@ div.menu-item .soc_header_mobile {
 }
 
 .ntf_header::before {
-  content: "";
-  background: url("../../assets/img/ntf_button_bg_dark.png") no-repeat center;
+  content: '';
+  background: url('../../assets/img/ntf_button_bg_dark.png') no-repeat center;
   background-size: contain;
   position: absolute;
   left: 0;
